Use more material-icons

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -34,9 +34,9 @@
                 <nav class="header-login-dropdown-content">
                     <div>
                         <div class="header-login-dropdown-flex">
-                            <a href="./html/login.html">Sign In</a>
-                            <a href="./html/register.html">Register</a>
-                            <a href="./index.html">Log Out</a>
+                            <a href="./html/login.html">Sign In <span class="material-icons" style="font-size: 16px;">login</span></a>
+                            <a href="./html/register.html">Register <span class="material-icons" style="font-size: 16px;">person_add</span></a>
+                            <a href="./index.html">Log Out <span class="material-icons" style="font-size: 16px;">logout</span></a>
                         </div>
                     </div>
                 </nav>
