Add alt text for header logo

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="logo-container">
             <a href="./index.html">
-                <img src="./images/logo-transparent.png" class="logo">
+                <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials">
             </a>
         </div>
         <form class="search-form">
