Add alt text for homepage images

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="logo-container">
             <a href="./index.html">
-                <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials">
+                <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
             </a>
         </div>
         <form class="search-form">
@@ -46,7 +46,7 @@
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <div class="homepage-banner-container">
         <div class="homepage-banner">
-            <img src="images/banner-text.png">
+            <img src="images/banner-text.png" alt="Homepage Welcome Banner">
         </div>
     </div>
     <div class="featured-products-container">
@@ -55,7 +55,7 @@
                 <h2>Currently Popular</h2>
                 <a href="./html/products/product1.html">
                     <div class="featured-product">
-                        <img src="./images/product1.png">
+                        <img src="./images/product1.png" alt="Currently Popular Product">
                     </div>
                 </a>
                 <span><a href="./html/products/product1.html">See More</a></span>
@@ -66,7 +66,7 @@
                 <h2>On Sale</h2>
                 <a href="./html/products/product12.html">
                     <div class="featured-product">
-                        <img src="./images/product12.png">
+                        <img src="./images/product12.png" alt="On Sale Product">
                     </div>
                 </a>
                 <span><a href="./html/sales.html">View Other Sales</a></span>
@@ -77,7 +77,7 @@
                 <h2>Highest Rating</h2>
                 <a href="./html/products/product14.html">
                     <div class="featured-product">
-                        <img src="./images/product14.png">
+                        <img src="./images/product14.png" alt="Highest Rated Product">
                     </div>
                 </a>
                 <span><a href="./html/products/product14.html">See More</a></span>
@@ -88,7 +88,7 @@
                 <h2>Under $20</h2>
                 <a href="./html/products/product16.html">
                     <div class="featured-product">
-                        <img src="./images/product16.png">
+                        <img src="./images/product16.png" alt="Under $20 Product">
                     </div>
                 </a>
                 <span><a href="./html/products/product8.html">Shop Under $20</a></span>
@@ -100,82 +100,82 @@
         <div class="inner-grid-product-listings">
             <a href="./html/products/product1.html">
                 <div class="product-listing">
-                    <img src="./images/product1.png">
+                    <img src="./images/product1.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product2.html">
                 <div class="product-listing">
-                    <img src="./images/product2.png">
+                    <img src="./images/product2.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product3.html">
                 <div class="product-listing">
-                    <img src="./images/product3.png">
+                    <img src="./images/product3.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product4.html">
                 <div class="product-listing">
-                    <img src="./images/product4.png">
+                    <img src="./images/product4.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product5.html">
                 <div class="product-listing">
-                    <img src="./images/product5.png">
+                    <img src="./images/product5.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product6.html">
                 <div class="product-listing">
-                    <img src="./images/product6.png">
+                    <img src="./images/product6.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product7.html">
                 <div class="product-listing">
-                    <img src="./images/product7.png">
+                    <img src="./images/product7.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product8.html">
                 <div class="product-listing">
-                    <img src="./images/product8.png">
+                    <img src="./images/product8.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product9.html">
                 <div class="product-listing">
-                    <img src="./images/product9.png">
+                    <img src="./images/product9.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product10.html">
                 <div class="product-listing">
-                    <img src="./images/product10.png">
+                    <img src="./images/product10.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product11.html">
                 <div class="product-listing">
-                    <img src="./images/product11.png">
+                    <img src="./images/product11.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product12.html">
                 <div class="product-listing">
-                    <img src="./images/product12.png">
+                    <img src="./images/product12.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product13.html">
                 <div class="product-listing">
-                    <img src="./images/product13.png">
+                    <img src="./images/product13.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product14.html">
                 <div class="product-listing">
-                    <img src="./images/product14.png">
+                    <img src="./images/product14.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product15.html">
                 <div class="product-listing">
-                    <img src="./images/product15.png">
+                    <img src="./images/product15.png" alt="Product Image">
                 </div>
             </a>
             <a href="./html/products/product16.html">
                 <div class="product-listing">
-                    <img src="./images/product16.png">
+                    <img src="./images/product16.png" alt="Product Image">
                 </div>
             </a>
         </div>
