--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -19,9 +19,11 @@
 <body>
     <header>
         <div class="logo-container">
-            <a href="./index.html">
-                <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
-            </a>
+            <h1>
+                <a href="./index.html">
+                    <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials" title="Pandemic Essentials">
+                </a>
+            </h1>
         </div>
         <form class="search-form">
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
