Revert "Use h1 for logo"
This reverts commit 421536f4bb664a472352b38bdae76e91982054d9.

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -19,11 +19,9 @@
 <body>
     <header>
         <div class="logo-container">
-            <h1>
-                <a href="./index.html">
-                    <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials" title="Pandemic Essentials">
-                </a>
-            </h1>
+            <a href="./index.html">
+                <img src="./images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
         </div>
         <form class="search-form">
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
