Update footer links

--- a/storefront-site/html/privacy-policy.html
+++ b/storefront-site/html/privacy-policy.html
@@ -208,14 +208,14 @@
                 <b class="footer-nav-header">Information</b>
                 <a class="footer-nav-content" href="./aboutus.html">About Us</a>
                 <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
-                <a class="footer-nav-content" href="./aboutus.html">Terms of Service</a>
-                <a class="footer-nav-content" href="./aboutus.html">Privacy Policy</a>
+                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Services</b>
                 <a class="footer-nav-content" href="./faq.html">FAQ</a>
-                <a class="footer-nav-content" href="./aboutus.html">Returns</a>
-                <a class="footer-nav-content" href="./aboutus.html">Shipping</a>
+                <a class="footer-nav-content" href="./returns.html">Returns</a>
+                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Contact Us</b>
