--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -187,14 +187,14 @@
                 <b class="footer-nav-header">Information</b>
                 <a class="footer-nav-content" href="./html/aboutus.html">About Us</a>
                 <a class="footer-nav-content" href="./html/aboutus.html">Locations & Hours</a>
-                <a class="footer-nav-content" href="./html/aboutus.html">Terms of Service</a>
-                <a class="footer-nav-content" href="./html/aboutus.html">Privacy Policy</a>
+                <a class="footer-nav-content" href="./html/tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./html/privacy-policy.html">Privacy Policy</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Services</b>
                 <a class="footer-nav-content" href="./html/faq.html">FAQ</a>
-                <a class="footer-nav-content" href="./html/aboutus.html">Returns</a>
-                <a class="footer-nav-content" href="./html/aboutus.html">Shipping</a>
+                <a class="footer-nav-content" href="./html/returns.html">Returns</a>
+                <a class="footer-nav-content" href="./html/shipping.html">Shipping</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Contact Us</b>
