Add nav to TOS and Privacy

--- a/storefront-site/html/privacy-policy.html
+++ b/storefront-site/html/privacy-policy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Privacy Policy</title>
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/header.css">
@@ -63,10 +63,45 @@
         </div>
         <main class="privacy-policy">
             <div>
-                <h1>Privacy Policy for Pandemic Essentials</h1>
+                <h1>Privacy Policy</h1>
 
                 <p>Last Updated: March 24, 2021</p>
                 <br>
+
+                <nav class="privacy-policy-nav">
+                    <ul>
+                        <li>
+                            <a href="#privacy1">General Data Protection Regulation (GDPR)</a>
+                        </li>
+                        <li>
+                            <a href="#privacy2">Log Files</a>
+                        </li>
+                        <li>
+                            <a href="#privacy3">Cookies and Web Beacons</a>
+                        </li>
+                        <li>
+                            <a href="#privacy4">Google DoubleClick DART Cookie</a>
+                        </li>
+                        <li>
+                            <a href="#privacy5">Our Advertising Partners</a>
+                        </li>
+                        <li>
+                            <a href="#privacy6">Privacy Policies</a>
+                        </li>
+                        <li>
+                            <a href="#privacy7">Third Party Privacy Policies</a>
+                        </li>
+                        <li>
+                            <a href="#privacy8">Children's Information</a>
+                        </li>
+                        <li>
+                            <a href="#privacy9">Online Privacy Policy Only</a>
+                        </li>
+                        <li>
+                            <a href="#privacy10">Consent</a>
+                        </li>
+                    </ul>
+                </nav>
 
                 <p>At Pandemic Essentials, accessible from http://www.pandemic-essentials.com, one of our main
                     priorities is the privacy of our visitors. This Privacy Policy document contains types of
@@ -77,7 +112,7 @@
                         href="https://www.gdprprivacypolicy.net/">GDPR Privacy Policy Generator from
                         GDPRPrivacyPolicy.net</a></p>
 
-                <h2>General Data Protection Regulation (GDPR)</h2>
+                <h2 id="privacy1">General Data Protection Regulation (GDPR)</h2>
                 <p>We are a Data Controller of your information.</p>
 
                 <p>Pandemic Essentials legal basis for collecting and using the personal information described in this
@@ -108,7 +143,7 @@
                     <li>The right to withdraw consent</li>
                 </ul>
 
-                <h2>Log Files</h2>
+                <h2 id="privacy2">Log Files</h2>
 
                 <p>Pandemic Essentials follows a standard procedure of using log files. These files log visitors when
                     they visit websites. All hosting companies do this and a part of hosting services' analytics. The
@@ -118,7 +153,7 @@
                     information is for analyzing trends, administering the site, tracking users' movement on the
                     website, and gathering demographic information.</p>
 
-                <h2>Cookies and Web Beacons</h2>
+                <h2 id="privacy3">Cookies and Web Beacons</h2>
 
                 <p>Like any other website, Pandemic Essentials uses 'cookies'. These cookies are used to store
                     information including visitors' preferences, and the pages on the website that the visitor accessed
@@ -128,7 +163,7 @@
                 <p>For more general information on cookies, please read <a
                         href="https://www.privacypolicyonline.com/what-are-cookies/">"What Are Cookies"</a>.</p>
 
-                <h2>Google DoubleClick DART Cookie</h2>
+                <h2 id="privacy4">Google DoubleClick DART Cookie</h2>
 
                 <p>Google is one of a third-party vendor on our site. It also uses cookies, known as DART cookies, to
                     serve ads to our site visitors based upon their visit to www.website.com and other sites on the
@@ -137,7 +172,7 @@
                         href="https://policies.google.com/technologies/ads">https://policies.google.com/technologies/ads</a>
                 </p>
 
-                <h2>Our Advertising Partners</h2>
+                <h2 id="privacy5">Our Advertising Partners</h2>
 
                 <p>Some of advertisers on our site may use cookies and web beacons. Our advertising partners are listed
                     below. Each of our advertising partners has their own Privacy Policy for their policies on user
@@ -152,7 +187,7 @@
                     </li>
                 </ul>
 
-                <h2>Privacy Policies</h2>
+                <h2 id="privacy6">Privacy Policies</h2>
 
                 <P>You may consult this list to find the Privacy Policy for each of the advertising partners of Pandemic
                     Essentials.</p>
@@ -166,7 +201,7 @@
                 <p>Note that Pandemic Essentials has no access to or control over these cookies that are used by
                     third-party advertisers.</p>
 
-                <h2>Third Party Privacy Policies</h2>
+                <h2 id="privacy7">Third Party Privacy Policies</h2>
 
                 <p>Pandemic Essentials's Privacy Policy does not apply to other advertisers or websites. Thus, we are
                     advising you to consult the respective Privacy Policies of these third-party ad servers for more
@@ -177,7 +212,7 @@
                     information about cookie management with specific web browsers, it can be found at the browsers'
                     respective websites.</p>
 
-                <h2>Children's Information</h2>
+                <h2 id="privacy8">Children's Information</h2>
 
                 <p>Another part of our priority is adding protection for children while using the internet. We encourage
                     parents and guardians to observe, participate in, and/or monitor and guide their online activity.
@@ -188,14 +223,14 @@
                     we strongly encourage you to contact us immediately and we will do our best efforts to promptly
                     remove such information from our records.</p>
 
-                <h2>Online Privacy Policy Only</h2>
+                <h2 id="privacy9">Online Privacy Policy Only</h2>
 
                 <p>Our Privacy Policy created at GDPRPrivacyPolicy.net) applies only to our online activities and is
                     valid for visitors to our website with regards to the information that they shared and/or collect in
                     Pandemic Essentials. This policy is not applicable to any information collected offline or via
                     channels other than this website.</p>
 
-                <h2>Consent</h2>
+                <h2 id="privacy10">Consent</h2>
 
                 <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
             </div>
