--- a/storefront-site/html/tos.html
+++ b/storefront-site/html/tos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Terms of Use</title>
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/header.css">
@@ -68,6 +68,35 @@
                 <p>Last Updated: March 24, 2021</p>
                 <br>
 
+                <nav class="terms-of-service-nav">
+                    <ul>
+                        <li>
+                            <a href="#tos1">Access to the Site</a>
+                        </li>
+                        <li>
+                            <a href="#tos2">User Content</a>
+                        </li>
+                        <li>
+                            <a href="#tos3">Third-Party Links & Ads; Other Users</a>
+                        </li>
+                        <li>
+                            <a href="#tos4">Disclaimers</a>
+                        </li>
+                        <li>
+                            <a href="#tos5">Limitation on Liability</a>
+                        </li>
+                        <li>
+                            <a href="#tos6">Copyright Policy</a>
+                        </li>
+                        <li>
+                            <a href="#tos7">General</a>
+                        </li>
+                        <li>
+                            <a href="#tos8">Contact Information</a>
+                        </li>
+                    </ul>
+                </nav>
+
                 <p>The Pandemic Essentials website located at http://www.pandemic-essentials.com is a copyrighted work
                     belonging to Pandemic Essentials. Certain features of the Site may be subject to additional
                     guidelines,
@@ -90,7 +119,7 @@
                         Generator</a> and the <a href="https://www.generateprivacypolicy.com">Privacy Policy
                         Generator</a>.</p>
 
-                <h2>Access to the Site</h2>
+                <h2 id="tos1">Access to the Site</h2>
 
                 <p><strong>Subject to these Terms.</strong> Company grants you a non-transferable, non-exclusive,
                     revocable, limited license to access the Site solely for your own personal, noncommercial use.
@@ -121,7 +150,7 @@
                     except for the limited access rights expressed in Section 2.1. Company and its suppliers reserve
                     all rights not granted in these Terms.</p>
 
-                <h2>User Content</h2>
+                <h2 id="tos2">User Content</h2>
 
                 <p><strong>User Content.</strong> "User Content" means any and all information and content that a
                     user submits to the Site. You are exclusively responsible for your User Content. You bear all
@@ -183,7 +212,7 @@
                     matter without the prior written consent of Company.  Company will use reasonable efforts to
                     notify you of any such claim, action or proceeding upon becoming aware of it.</p>
 
-                <h2>Third-Party Links & Ads; Other Users</h2>
+                <h2 id="tos3">Third-Party Links & Ads; Other Users</h2>
 
                 <p><strong>Third-Party Links & Ads.</strong> The Site may contain links to third-party websites and
                     services, and/or display advertisements for third-parties.  Such Third-Party Links & Ads are not
@@ -240,7 +269,7 @@
                     </li>
                 </ul>
 
-                <h2>Disclaimers</h2>
+                <h2 id="tos4">Disclaimers</h2>
 
                 <p>The site is provided on an "as-is" and "as available" basis, and company and our suppliers
                     expressly disclaim any and all warranties and conditions of any kind, whether express, implied,
@@ -256,7 +285,7 @@
                     not apply to you.  Some jurisdictions do not allow limitations on how long an implied warranty
                     lasts, so the above limitation may not apply to you.</p>
 
-                <h2>Limitation on Liability</h2>
+                <h2 id="tos5">Limitation on Liability</h2>
 
                 <p>To the maximum extent permitted by law, in no event shall company or our suppliers be liable to
                     you or any third-party for any lost profits, lost data, costs of procurement of substitute
@@ -286,7 +315,7 @@
                     terminated, the following provisions of these Terms will remain in effect: Sections 2 through
                     2.5, Section 3 and Sections 4 through 10.</p>
 
-                <h2>Copyright Policy.</h2>
+                <h2 id="tos6">Copyright Policy</h2>
 
                 <p>Company respects the intellectual property of others and asks that users of our Site do the
                     same.  In connection with our Site, we have adopted and implemented a policy respecting
@@ -316,7 +345,7 @@
                     costs and attorney’s fees incurred by us in connection with the written notification and
                     allegation of copyright infringement.</p>
 
-                <h2>General</h2>
+                <h2 id="tos7">General</h2>
 
                 <p>These Terms are subject to occasional revision, and if we make any substantial changes, we may
                     notify you by sending you an e-mail to the last e-mail address you provided to us and/or by
@@ -483,7 +512,7 @@
                     other third-parties. You are not permitted to use these Marks without our prior written consent
                     or the consent of such third party which may own the Marks.</p>
 
-                <h2>Contact Information</h2>
+                <h2 id="tos8">Contact Information</h2>
 
                 <p>Address: 1600 Holloway Ave, San Francisco, CA 94132</p>
             </div>
