--- a/storefront-site/html/privacy-policy.html
+++ b/storefront-site/html/privacy-policy.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- BEGIN HEADER -->
     <header>
         <div class="logo-container">
             <a href="../index.html">
@@ -45,6 +46,7 @@
         </nav>
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
 
     <div class="grid-container">
         <div class="sidebar">
@@ -237,6 +239,7 @@
         </main>
     </div>
 
+    <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
             <nav class="footer-nav">
@@ -273,6 +276,7 @@
             </a>
         </nav>
     </footer>
+    <!-- END FOOTER -->
 </body>
 
 </html>
