--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- BEGIN HEADER -->
     <header>
         <div class="logo-container">
             <a href="./index.html">
@@ -44,6 +45,8 @@
         </nav>
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
+
     <div class="homepage-banner-container">
         <div class="homepage-banner">
             <img src="images/banner-text.png" alt="Homepage Welcome Banner">
@@ -181,6 +184,7 @@
         </div>
     </div>
 
+    <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
             <nav class="footer-nav">
@@ -216,6 +220,7 @@
             </a>
         </nav>
     </footer>
+    <!-- END FOOTER -->
 </body>
 
 </html>
