--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -37,7 +37,7 @@
         </form>
         <div class="create-account-container">
             <span>New to PandemicEssentials?</span>
-            <a href="register.html">
+            <a href="./register.html">
                 <button type="button" class="create-account-link">Create your PandemicEssentials Account</button>
             </a>
         </div>
