--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -6,68 +6,135 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Preferences</title>
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/user-preferences.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 
-<body topmargin="20">
-    <table>
-        <tr>
-            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Essentials</th>
-            <th width="100%"></th>
-            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-            <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-        </tr>
-    </table>
-    <div>
-        <h1>User Preferences</h1>
-        <br>
-        <b>Username: </b>exampleuser
-        <br>
-        <b>Email: </b>exampleuser@example.com
-        <h2>Change Password</h2>
-        <form name="change-password">
-            <table>
-                <tr>
-                    <td><input type="password" placeholder="Current Password"></td>
-                </tr>
-                <tr>
-                    <td><input type="password" placeholder="New Password"></td>
-                </tr>
-                <tr>
-                    <td><input type="password" placeholder="Re-type Password"></td>
-                </tr>
-                <tr>
-                    <td align="right"><input type="submit" value="Confirm"></td>
-                </tr>
-            </table>
+<body>
+    <!-- BEGIN HEADER -->
+    <header>
+        <div class="logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
+        </div>
+        <form class="search-form">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
-        <h2>Email Preferences</h2>
-        <form name="change-password">
-            <table>
-                <tr>
-                    <td><input type="checkbox">Unsubscribe from promotional emails</td>
-                </tr>
-                <tr>
-                    <td align="right"><input type="submit" value="Confirm"></td>
-                </tr>
-            </table>
-        </form>
+        <nav class="header-nav">
+            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
+            <div class="header-login-dropdown">
+                <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="./login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="./register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="../index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
+    </header>
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
+
+    <div class="preferences-outer-container">
+        <nav class="hierarchical-nav">
+            <a href="./user-preferences.html">Your Account</a>
+            &nbsp;>&nbsp;
+            <b>Preferences</b>
+        </nav>
+        <h1>Preferences</h1>
+        <div class="preferences-form">
+            <div class="preferences-form-section">
+                <a href="./user-preferences.html">
+                    <button type="button">Edit</button>
+                </a>
+                <b>Name:</b>
+                <br>
+                John Doe
+            </div>
+            <hr>
+            <div class="preferences-form-section">
+                <a href="./user-preferences.html">
+                    <button type="button">Edit</button>
+                </a>
+                <b>Email:</b>
+                <br>
+                example@example.com
+            </div>
+            <hr>
+            <div class="preferences-form-section">
+                <a href="./user-preferences.html">
+                    <button type="button">Edit</button>
+                </a>
+                <b>Password:</b>
+                <br>
+                ********
+            </div>
+            <hr>
+            <div class="preferences-form-section">
+                <a href="./user-preferences.html">
+                    <button type="button">Edit</button>
+                </a>
+                <b>Email Subscriptions:</b>
+                <br>
+                <span style="color: #505050;">Manage your email subscription preferences</span>
+            </div>
+        </div>
+        <a href="../index.html">
+            <button type="button" class="preferences-done-button">Done</button>
+        </a>
     </div>
-    <br>
-    <br>
-    <br>
+
+    <!-- BEGIN FOOTER -->
     <footer>
-        <table>
-            <tr>
-                <td><a href="./aboutus.html">About us</a></td>
-                <td><a href="./faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
+        <div class="footer-nav-container">
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Information</b>
+                <a class="footer-nav-content" href="./aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Services</b>
+                <a class="footer-nav-content" href="./faq.html">FAQ</a>
+                <a class="footer-nav-content" href="./returns.html">Returns</a>
+                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Contact Us</b>
+                <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+                <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
+                <span class="footer-nav-content">By Email:</span>
+                <span class="footer-nav-content"><a
+                        href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Newsletter</b>
+                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
+                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+            </nav>
+        </div>
+        <hr>
+        <nav class="footer-logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo">
+            </a>
+        </nav>
     </footer>
+    <!-- END FOOTER -->
 </body>
 
 </html>
