--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shipping</title>
+    <title>Returns</title>
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/header.css">
@@ -51,27 +51,27 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Shipping</span>
+                <span style="font-size: 1.2em;">Returns</span>
                 <hr>
                 
             </nav>
         </div>
-        <main class="shipping">
+        <main class="returns">
             <div>
-                <h1>FREE SHIPPING</h1>
+                <h1>Return Policy</h1>
 
                 <p>Last Updated: March 27, 2021</p>
                 <br>
 
-                <p>For all orders over $50 or more please enjoy complimentary free shipping for domestic orders.</p>
+                <p>Thank for shopping at Pandemic Essentials. If you are not 100% satisfied with your purchase we can help</p>
 
 
-                <h2>What if I need it soon?</h2>
-                <p>Next Day Air shipping can be included through UPS for an additional $40.</p>
-                
+                <h2>Returns</h2>
+                <p>You have 30 days to return an unopen and unused item from the date you received it. It must be in the original packaging with the receipt.</p>
+                <p>You are responsible fo the cost of shipping. All shipping costs are non refundable.</p>
 
-                <h3>International Orders</h3>
-                <p>Please call and we will be able to assist you.</p>
+                <h3>Refunds</h3>
+                <p>We will notify you upon receiving the order. If approved, you will receive credit.</p>
 
             </div>
         </main>
