--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Confirmation</title>
-    </head>
 
-<body topmargin="20">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Check Out</title>
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/confirmation.css">
+    <link rel="stylesheet" href="../styles/grid-product-listings.css">
+    <link rel="stylesheet" href="../styles/grid-featured-products.css">
+</head>
 
-</body>
-    <table>
-        <tr>
-            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Essentials</th>
-            <th width="100%"></th>
-            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-            <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-        </tr>
-    </table>
-    <br>
-    <br>
+<body>
+    <!-- Header, the top bar , hyperlink is set up properly-->
+    <header>
+        <div class="logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
+        </div>
+        <form class="search-form">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+        </form>
+        <nav class="header-nav">
+            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
+            <div class="header-login-dropdown">
+                <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="./login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="./register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="../index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
+    </header>
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
+
     <table align="right">
         <tr>
             <th width="15%">⚪</th>
@@ -40,43 +68,82 @@
     </table>
     <br>
     <br>
-    <br>
-    <br>
-    <table align = "center">
-        <tr>
-            <th> <center><h2>THANK YOU FOR YOUR PURCHASE</h2></center></th>
-           
-        <tr>
-        </tr>
-            <th> <center>ESTIMATED DELIVERY: LOREM IPSUM</center></th>
-        </tr>
-    </table>
-    <br>
-    <br>
-    <a href="../index.html"><center>Back to the Store</center></a></td>
-    <br>
-    <br>
-    <br>
 
-    <h3>RECOMMENDED FOR YOU</h3>
-    <table>
-        <tr>
-            <td><a href="./products/product3.html"><img src="../images/product3.png" width="128"></a></td>
-            <td><a href="./products/product4.html"><img src="../images/product4.png" width="128"></a></td>
-            <td><a href="./products/product5.html"><img src="../images/product5.png" width="128"></a></td>
-            <td><a href="./products/product2.html"><img src="../images/product2.png" width="128"></a></td>
-        </tr>
-    </table>
+    <div class = "confirmation-outer-container">
+        <h1><b><center>Thank you for your purchase!!</center></b></h1>
+        <h4><b><center>Estimated Delivery in 2 weeks!! </center></b></h4>
+        <a href="../index.html"><center>Back to the Store</center></a>
 
-    <footer>
-        <table>
-            <tr>
-                <td><a href="./aboutus.html">About us</a></td>
-                <td><a href="./faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
+
+    <div class="outer-grid-product-listings">
+        <h2>Browse our full selection of products</h2>
+        <div class="inner-grid-product-listings">
+            <a href="./products/product4.html">
+                <div class="product-listing">
+                    <img src="../images/product4.png" alt="Product Image">
+                </div>
+            </a>
+            <a href="./products/product5.html">
+                <div class="product-listing">
+                    <img src="../images/product5.png" alt="Product Image">
+                </div>
+            </a>
+            <a href="./products/product6.html">
+                <div class="product-listing">
+                    <img src="../images/product6.png" alt="Product Image">
+                </div>
+            </a>
+            <a href="./products/product7.html">
+                <div class="product-listing">
+                    <img src="../images/product7.png" alt="Product Image">
+                </div>
+            </a>
+            <a href="./products/product10.html">
+                <div class="product-listing">
+                    <img src="../images/product10.png" alt="Product Image">
+                </div>
+            </a>
+        </div>
+    </div>
+
+     <!-- Footer, hyperlink is set up, need a return page -->
+     <footer>
+        <div class="footer-nav-container">
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Information</b>
+                <a class="footer-nav-content" href="./aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="./aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Services</b>
+                <a class="footer-nav-content" href="./faq.html">FAQ</a>
+                <a class="footer-nav-content" href="./shipping.html">Returns</a>
+                <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Contact Us</b>
+                <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+                <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
+                <span class="footer-nav-content">By Email:</span>
+                <span class="footer-nav-content"><a
+                        href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+            </nav>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Newsletter</b>
+                <a class="footer-nav-content" href="./faq.html">Subscribe</a>
+                <a class="footer-nav-content" href="./faq.html">Unsubscribe</a>
+            </nav>
+        </div>
+        <hr>
+        <nav class="footer-logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo">
+            </a>
+        </nav>
     </footer>
+    <!-- END FOOTER -->
+</body>
+
 </html>
