--- a/storefront-site/html/shipping.html
+++ b/storefront-site/html/shipping.html
@@ -51,9 +51,11 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
+                <span style="font-size: 1.2em;">Returns</span>
+                <hr>
                 <span style="font-size: 1.2em;">Shipping</span>
                 <hr>
-                
+                <span style="font-size: 1.2em;">Locations and Hours</span>
             </nav>
         </div>
         <main class="shipping">
