--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -51,6 +51,10 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
+                <span style="font-size: 1.2em;">Returns</span>
+                <hr>
+                <span style="font-size: 1.2em;">Shipping</span>
+                <hr>
                 <span style="font-size: 1.2em;">Locations and Hours</span>
                 
             </nav>
