--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -53,7 +53,9 @@
             <nav class="sidebar-nav">
                 <span style="font-size: 1.2em;">Returns</span>
                 <hr>
-                
+                <span style="font-size: 1.2em;">Shipping</span>
+                <hr>
+                <span style="font-size: 1.2em;">Locations and Hours</span>
             </nav>
         </div>
         <main class="returns">
